--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "bootstrap": "^4.1.3",
+    "mdbootstrap": "^4.5.9",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-fontawesome": "^1.6.1",
+    "react-ionicons": "^2.1.6",
+    "react-onscroll": "^1.0.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
